[gd_scene load_steps=27 format=2]

[ext_resource path="res://player/CatGlow.tres.gd" type="Script" id=1]
[ext_resource path="res://player/Cat.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/player/player.png" type="Texture" id=3]
[ext_resource path="res://assets/shaders/outline2D.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=22]
shader = ExtResource( 4 )
shader_param/line_color = Color( 1, 1, 1, 1 )
shader_param/line_thickness = 1.0

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 5, 8, 5 ]
}

[sub_resource type="Animation" id=16]
resource_name = "licking"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 17, 20 ]
}

[sub_resource type="Animation" id=2]
resource_name = "sitting"
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.65, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=15]
resource_name = "to_licking"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 14, 16 ]
}

[sub_resource type="Animation" id=3]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 9, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "licking"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "sitting"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "to_licking"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachine" id=8]
states/idle/node = SubResource( 12 )
states/idle/position = Vector2( 581, 248 )
states/licking/node = SubResource( 17 )
states/licking/position = Vector2( 401, 96 )
states/sitting/node = SubResource( 4 )
states/sitting/position = Vector2( 837, 241 )
states/to_licking/node = SubResource( 18 )
states/to_licking/position = Vector2( 401, 277 )
states/walking/node = SubResource( 5 )
states/walking/position = Vector2( 707, 96 )
transitions = [ "walking", "sitting", SubResource( 6 ), "sitting", "walking", SubResource( 7 ), "sitting", "idle", SubResource( 13 ), "idle", "walking", SubResource( 14 ), "idle", "to_licking", SubResource( 19 ), "to_licking", "licking", SubResource( 20 ), "licking", "walking", SubResource( 21 ) ]
start_node = "walking"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5, 3 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 5, 0.999999 )

[node name="Cat" type="KinematicBody2D" groups=[
"player",
]]
z_index = 1
script = ExtResource( 2 )
speed = 60

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 22 )
texture = ExtResource( 3 )
hframes = 21
frame = 19
script = ExtResource( 1 )
color1 = Color( 1, 1, 1, 0.862745 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/idle = SubResource( 1 )
anims/licking = SubResource( 16 )
anims/sitting = SubResource( 2 )
anims/to_licking = SubResource( 15 )
anims/walking = SubResource( 3 )

[node name="Tween" type="Tween" parent="Sprite"]

[node name="AnimationTree" type="AnimationTree" parent="Sprite"]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[node name="Area2D" type="Area2D" parent="." groups=[
"player",
]]

[node name="HurtBox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 9 )
shape = SubResource( 10 )

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2( 1, 11 )
shape = SubResource( 11 )

[node name="LickTimer" type="Timer" parent="."]
[connection signal="tween_completed" from="Sprite/Tween" to="Sprite" method="_on_Tween_tween_completed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="timeout" from="LickTimer" to="." method="_on_LickTimer_timeout"]
